--- a/index.html
+++ b/index.html
@@ -129,28 +129,28 @@
                 <p class="item">Product Designer</p>
                 <ul class="social-icons">
                     <li class="social-icons-item">
-                        <a href="" class="social-icons-link">
+                        <a class="social-icons-link" href="">
                             <svg class="social-icons-svg">
                                 <use href="./images/icons/sprite.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-icons-item">
-                        <a href="" class="social-icons-link">
+                        <a class="social-icons-link" href="">
                             <svg class="social-icons-svg">
                                 <use href="./images/icons/sprite.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-icons-item">
-                        <a href="" class="social-icons-link">
+                        <a class="social-icons-link" href="">
                             <svg class="social-icons-svg">
                                 <use href="./images/icons/sprite.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-icons-item">
-                        <a href="" class="social-icons-link">
+                        <a class="social-icons-link" href="">
                             <svg class="social-icons-svg">
                                 <use href="./images/icons/sprite.svg#icon-linkedin"></use>
                             </svg>
@@ -275,6 +275,52 @@
         </div>
     </section>
 </main>
+<section class="page-two section-page-tour">
+    <div class="container">
+        <h2 class="captions">Постоянные клиенты</h2>
+        <ul class="benefits">
+            <li class="features-time">
+                <a href="" class="clients-link">
+                <svg class="featers-svg">
+                    <use href="./images/icons/sprite.svg#icon-client-1"></use>
+                </svg>
+                </a>
+            </li>
+            <li class="features-time"><a href="" class="clients-link">
+                    <svg class="featers-svg">
+                        <use href="./images/icons/sprite.svg#icon-client-2"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="features-time"><a href="" class="clients-link">
+                    <svg class="featers-svg">
+                        <use href="./images/icons/sprite.svg#icon-client-3"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="features-time"><a href="" class="clients-link">
+                    <svg class="featers-svg">
+                        <use href="./images/icons/sprite.svg#icon-client-4"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="features-time"><a href="" class="clients-link">
+                    <svg class="featers-svg">
+                        <use href="./images/icons/sprite.svg#icon-client-5"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="features-time"><a href="" class="clients-link">
+                    <svg class="featers-svg">
+                        <use href="./images/icons/sprite.svg#icon-client-6"></use>
+                    </svg>
+                </a>
+            </li>
+
+            
+        </ul>
+    </div>
+</section>
   
 <!--Site footer-->
     <footer class="foot">
