--- a/index.html
+++ b/index.html
@@ -333,6 +333,39 @@
                         <li class="link-item-link"><a class="end " href="tel:+380991111111">+38 099 111 11 11</a></li>
                     </ul>
                 </address>
+                <div class="blocking">
+                <h3 class="foter-end">Присоединяйтесь</h3>
+                <ul class="social-icons">
+                    <li class="social-icons-item">
+                        <a href="" class="social-icons-link">
+                            <svg class="social-icons-svg">
+                                <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icons-item">
+                        <a href="" class="social-icons-link">
+                            <svg class="social-icons-svg">
+                                <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icons-item">
+                        <a href="" class="social-icons-link">
+                            <svg class="social-icons-svg">
+                                <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icons-item">
+                        <a href="" class="social-icons-link">
+                            <svg class="social-icons-svg">
+                                <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+                </div>
         </div>
     </footer>
 </body>
