Конец 4й домашней работы

--- a/portfolio.html
+++ b/portfolio.html
@@ -143,19 +143,53 @@
         </section>
     
 </main>
-
-    <!--Site footer-->
     <footer class="foot">
         <div class="container">
-            <a class="logo" href="">Web<span class="lp">Studio</span></a>
-            <address>
-                <ul class="the-end">
-                    <li><a class="adress" href="https://goo.gl/maps/jmw2MAwdon85PqzY6" target="_blank"
-                            rel="noopener noreferrer"> г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li><a class="end link-footer" href="mailto:info@example.com">info@example.com</a></li>
-                    <li><a class="end " href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <div class="adress-page-time">
+                <a class="logo" href="">Web<span class="lp">Studio</span></a>
+                <address>
+                    <ul class="the-end">
+                        <li class="link-item-link"><a class="adress" href="https://goo.gl/maps/jmw2MAwdon85PqzY6"
+                                target="_blank" rel="noopener noreferrer"> г. Киев, пр-т Леси Украинки, 26</a></li>
+                        <li class="link-item-link"><a class="end link-footer"
+                                href="mailto:info@example.com">info@example.com</a></li>
+                        <li class="link-item-link"><a class="end " href="tel:+380991111111">+38 099 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="blocking">
+                <h3 class="foter-end">Присоединяйтесь</h3>
+                <ul class="social-icons">
+                    <li class="social-icons-item">
+                        <a href="" class="social-icons-link link-features">
+                            <svg class="social-icons-svg">
+                                <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icons-item">
+                        <a href="" class="social-icons-link link-features">
+                            <svg class="social-icons-svg">
+                                <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icons-item">
+                        <a href="" class="social-icons-link link-features">
+                            <svg class="social-icons-svg">
+                                <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icons-item">
+                        <a href="" class="social-icons-link link-features">
+                            <svg class="social-icons-svg">
+                                <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
