--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
 <!--Site footer-->
     <footer class="foot">
         <div class="container">
+            <div class="adress-page-time">
             <a class="logo" href="">Web<span class="lp">Studio</span></a>
                 <address>      
                     <ul class="the-end">
@@ -333,32 +334,33 @@
                         <li class="link-item-link"><a class="end " href="tel:+380991111111">+38 099 111 11 11</a></li>
                     </ul>
                 </address>
+            </div>
                 <div class="blocking">
                 <h3 class="foter-end">Присоединяйтесь</h3>
                 <ul class="social-icons">
                     <li class="social-icons-item">
-                        <a href="" class="social-icons-link">
+                        <a href="" class="social-icons-link link-features">
                             <svg class="social-icons-svg">
                                 <use href="./images/icons/sprite.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-icons-item">
-                        <a href="" class="social-icons-link">
+                        <a href="" class="social-icons-link link-features">
                             <svg class="social-icons-svg">
                                 <use href="./images/icons/sprite.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-icons-item">
-                        <a href="" class="social-icons-link">
+                        <a href="" class="social-icons-link link-features">
                             <svg class="social-icons-svg">
                                 <use href="./images/icons/sprite.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="social-icons-item">
-                        <a href="" class="social-icons-link">
+                        <a href="" class="social-icons-link link-features">
                             <svg class="social-icons-svg">
                                 <use href="./images/icons/sprite.svg#icon-linkedin"></use>
                             </svg>
