--- a/portfolio.html
+++ b/portfolio.html
@@ -57,8 +57,8 @@
         
 
         <ul class="card-set">
-            <li class="items clouddy tem-item">
-                <a href="">
+            <li class="items tem-item">
+                <a class="item-link-stylle" href="">
                     <img class="img-portfolio" src="./images/image-1.jpg" width="370" alt="">
                     <div class="portfoll">
                     <h2 class="txt">Технокряк</h2>
