--- a/portfolio.html
+++ b/portfolio.html
@@ -146,7 +146,7 @@
     <footer class="foot">
         <div class="container">
             <div class="adress-page-time">
-                <a class="logo" href="">Web<span class="lp">Studio</span></a>
+                <a class="logo logotype" href="">Web<span class="lp">Studio</span></a>
                 <address>
                     <ul class="the-end">
                         <li class="link-item-link"><a class="adress" href="https://goo.gl/maps/jmw2MAwdon85PqzY6"
