--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     <footer class="foot">
         <div class="container">
             <div class="adress-page-time">
-            <a class="logo" href="">Web<span class="lp">Studio</span></a>
+            <a class="logo logotype" href="">Web<span class="lp">Studio</span></a>
                 <address>      
                     <ul class="the-end">
                         <li class="link-item-link"><a class="adress" href="https://goo.gl/maps/jmw2MAwdon85PqzY6" target="_blank" rel="noopener noreferrer"> г. Киев, пр-т Леси Украинки, 26</a></li>
