--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
                     </div>
                 </a>
             </li>
-            <li class="items clouddy tem-item">
+            <li class="items tem-item">
                 <a href="">
                     <img class="img-portfolio" src="./images/image-2.jpg" width="370" alt="">
                     <div class="portfoll">
@@ -75,7 +75,7 @@
                     </div>
                 </a>
             </li>
-            <li class="items clouddy tem-item">
+            <li class="items tem-item">
                 <a href="">
                     <img class="img-portfolio" src="./images/image-3.jpg" width="370" alt="">
                     <div class="portfoll">
@@ -84,7 +84,7 @@
                     </div>
                 </a>
             </li>
-            <li class="items clouddy tem-item">
+            <li class="items tem-item">
                 <a href="">
                     <img class="img-portfolio" src="./images/image-4.jpg" width="370" alt="">
                     <div class="portfoll">
@@ -93,7 +93,7 @@
                     </div>
                 </a>
             </li>
-            <li class="items clouddy tem-item">
+            <li class="items tem-item">
                 <a href="">
                     <img class="img-portfolio" src="./images/image-5.jpg" width="370" alt="">
                     <div class="portfoll">
@@ -102,7 +102,7 @@
                     </div>
                 </a>
             </li>
-            <li class="items clouddy tem-item">
+            <li class="items tem-item">
                 <a href="">
                     <img class="img-portfolio" src="./images/image-6.jpg" width="370" alt="">
                     <div class="portfoll">
@@ -111,7 +111,7 @@
                     </div>
                 </a>
             </li>
-            <li class="items clouddy tem-item">
+            <li class="items tem-item">
                 <a href="">
                     <img class="img-portfolio" src="./images/image-7.jpg" width="370" alt="">
                     <div class="portfoll">
@@ -120,7 +120,7 @@
                     </div>
                 </a>
             </li>
-            <li class="items clouddy tem-item">
+            <li class="items tem-item">
                 <a href="">
                     <img class="img-portfolio" src="./images/image-8.jpg" width="370" alt="">
                     <div class="portfoll">
@@ -129,7 +129,7 @@
                     </div>
                 </a>
             </li>
-            <li class="items clouddy tem-item">
+            <li class="items tem-item">
                 <a href="">
                     <img class="img-portfolio" src="./images/image-9.jpg" width="370" alt="">
                     <div class="portfoll">
